--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
             <li><a href="pages/sub_tag.html">&lt; sub &gt; tag</a></li>
             <li><a href="pages/sup_tag.html">&lt; sup &gt; tag</a></li>
         </ol>
+        <br><br><br>
         
-        
+    </div>
+    <div class="footer">
+        Copyright © 2021 All right reserved by <a href="github.com/cemsltk" target="_blank">cemsltk</a>
     </div>
 
 </body>
