--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         
     </div>
     <div class="footer">
-        Copyright © 2021 All right reserved by <a href="github.com/cemsltk" target="_blank">cemsltk</a>
+        Copyright © 2021 All right reserved by <a href="https://github.com/cemsltk" target="_blank">cemsltk</a>
     </div>
 
 </body>
