--- a/pages/Introduction.html
+++ b/pages/Introduction.html
@@ -80,6 +80,11 @@
         The &lt;p&gt; element defines a paragraph <br><br>
     </p>
     <br><br>
+  
     </div>
+
+    <div class="footer">
+      Copyright © 2021 All right reserved by <a href="https://github.com/cemsltk" target="_blank">cemsltk</a>
+  </div>
   </body>
 </html>
