--- a/pages/b_tag.html
+++ b/pages/b_tag.html
@@ -47,6 +47,26 @@
         <strong>Tip:</strong> You can also use the following CSS to set bold text: "font-weight: bold;".
         </p>
         <br><br>
+        <h1>Browser Support</h1>
+        <table>
+            <tr>
+              <th></th>
+              <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Google_Chrome_icon_%28September_2014%29.svg/2048px-Google_Chrome_icon_%28September_2014%29.svg.png"></th>
+              <th><img src="https://upload.wikimedia.org/wikipedia/commons/6/66/Firefox_logo.png"></th>
+              <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Opera_2015_icon.svg/2048px-Opera_2015_icon.svg.png"></th>
+              <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Safari_browser_logo.svg/2057px-Safari_browser_logo.svg.png"></th>
+              <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/Microsoft_Edge_logo_%282019%29.svg/2048px-Microsoft_Edge_logo_%282019%29.svg.png"></th>
+            </tr>
+            <tr>
+              <td>&lt;b&gt;</td>
+              <td>Yes</td>
+              <td>Yes</td>
+              <td>Yes</td>
+              <td>Yes</td>
+              <td>Yes</td>  
+            </tr>
+          </table>
+          <br><br><br>
         <div class="example">
             <strong>Example:</strong> <br><br>
             Make some text bold (without marking it as important):<br><br>
@@ -76,6 +96,9 @@
         </div>
         <br><br>
         
+    </div>
+    <div class="footer">
+        Copyright © 2021 All right reserved by <a href="https://github.com/cemsltk" target="_blank">cemsltk</a>
     </div>
 </body>
 
