--- a/pages/span_tag.html
+++ b/pages/span_tag.html
@@ -62,7 +62,9 @@
         </p>
         
     </div>
-
+    <div class="footer">
+        Copyright © 2021 All right reserved by <a href="https://github.com/cemsltk" target="_blank">cemsltk</a>
+    </div>
 </body>
 
 </html>
