--- a/pages/i_tag.html
+++ b/pages/i_tag.html
@@ -67,6 +67,8 @@
         <br>
     </div>
     </div>
-
+    <div class="footer">
+        Copyright © 2021 All right reserved by <a href="https://github.com/cemsltk" target="_blank">cemsltk</a>
+    </div>
 </body>
 </html>
