--- a/pages/p_tag.html
+++ b/pages/p_tag.html
@@ -49,6 +49,8 @@
                     </div>
                 </p>
     </div>
-
+    <div class="footer">
+        Copyright © 2021 All right reserved by <a href="https://github.com/cemsltk" target="_blank">cemsltk</a>
+    </div>
 </body>
 </html>
